# mail_scraper

./: .editorconfig  .eslintrc.json  .gitignore  .prettierrc  Cargo.toml  Makefile  README.md  add_record_config.ini  package.json
parse-mail/: Cargo.toml
parse-mail/src/: lib.rs
src/: bridge.hpp  config_server.rs  file_path.rs  filesystem.hpp  helpers.hpp  internal.rs  lib.rs  main.cpp
src/config_server/: save_data.rs
src/internal/: parse_data.rs
static/: index.html  main.js  style.css
www/: formStaff.js  index.html  main.js  saved.html  style.css  style.scss
