[package]
name = "xlsx_scraper"
version = "0.1.0"
authors = ["Milesq <wmilosz88@gmail.com>"]
edition = "2018"

[lib]
name = "add_record"
crate-type = ["dylib"]

[dependencies]
csv = "1.1.3"
web_server = { git = "https://github.com/Milesq/web_server" }
rust-ini = "0.15.2"
serde = { version = "1.0.111", features = ["derive"] }
tinytemplate = "1.1.0"
urlencoding = "1.0.0"
