[package]
name = "parse_mail"
version = "0.1.0"
authors = ["Milesq <wmilosz88@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.63"
console_error_panic_hook = "0.1.6"
wee_alloc = "0.4.5"
js-sys = "0.3.40"

[profile.release]
opt-level = "s"
